bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value message
  if (message=='R') {
      ^BDR:7: error: not found: value message
  else if (message=='L') {
           ^BDR:11: error: not found: value message
  else if (message=='I') {
           ^BDR:16: error: not found: value message
  else if (message=='A') {
           ^BDR:19: error: not found: value message
  else if (message=='B') {
           ^BDR:23: error: not found: value message
  else if (message=='C') {
           ^BDR:28: error: not found: value message
  else if (message=='Z') {
           ^BDR:31: error: not found: value message
  else if (message=='Y') {
           ^BDR:35: error: not found: value message
  else if (message=='X') {
           ^